tests/snapshots/regression/collections__error_limit_missing_commas.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/error_limit_missing_commas.flx
exit_code: 1

--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:5
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |     ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:7
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |       ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:9
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |         ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:11
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |           ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:13
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |             ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:15
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |               ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:17
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |                 ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:19
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |                   ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E073]: MISSING COMMA

Missing comma between arguments.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:3:21
  |
3 |   1 2 3 4 5 6 7 8 9 10
  |                     ^^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


--> compiler error[E034]: UNEXPECTED TOKEN

Expected `,` or `)` after argument, got INT.

  --> tests/fixtures/collections/error_limit_missing_commas.flx:4:3
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |   ^^

Found 10 errors.
